...
            android:layout_marginTop="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/organization_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="Organization Name"
                android:inputType="text"
...
            android:layout_marginTop="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_oragnization_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/facility_code_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="Facility Code"
                android:inputType="text"
...
