...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <EditText
        android:id="@+id/edit_notif_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="text"
        android:hint="@string/notification_title" />
    <EditText
        android:id="@+id/edit_notif_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="textMultiLine"
        android:hint="@string/notification_description" />
</LinearLayout>
