...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button_cancelEntrant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:layout_alignParentEnd="true"
                android:text="@string/cancel_entrant"
                android:textColor="@color/white" />
...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button_sampleNewEntrant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:layout_alignParentEnd="true"
                android:text="@string/sample_new_entrant"
                android:textColor="@color/white" />
...
