...
                        tools:text="Summer Family Fun Day" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/chosen_entrant_button"
                android:layout_width="361dp"
                android:layout_height="63dp"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:text="View List of Chosen Entrants "
                android:textColor="@color/white"
...
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chosen_entrant_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelled_entrant_button"
                android:layout_width="361dp"
                android:layout_height="63dp"
                android:padding="12dp"
                android:text="View List of Cancelled Entrants "
                android:textColor="@color/white"
                app:backgroundTint="@color/blue"
...
